--- a/011.html
+++ b/011.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A3600002025120245523</div></li>
+                    <div class="detail-value " id="reqNo">A6500002025121115523</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">江西省，湖北省</div></li>
+				<div class="detail-value " id="passDists">新疆维吾尔自治区，青海省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年12月03日17时29分至 2025年12月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年12月12日17时29分至 2025年12月31日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">江西省</span>:江西擎天材料有限公司-G316-温家圳收费站-G60沪昆高速--G70福银高速--G56杭瑞高速--赣鄂界；<br><hr>
-<span id="pro">湖北省</span>:鄂赣界--G56杭瑞高速--排市收费站<br><hr></div></li>
+<span id="pro">新疆维吾尔自治区</span>:米兰拾光商贸物流园--G315--米兰收费站--G0612西和高速--新青界；<br><hr>
+<span id="pro">青海省</span>:青新界--G0612西和高速--老茫崖收费站--G315--中国石油加油站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">赵伟宁</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">MQY-2145球磨机一台</div></li>
+                    <div class="detail-value " id="cargoInfo">挖掘机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">60.20吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -134,8 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-江西省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-湖北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+新疆维吾尔自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+青海省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
